22-04-08 Xavier Perseguers <xavier@perseguers.ch>
	* added caching mechanism
	* removed protected pages from feeds
	* fixed back URL for feed whose content does not come from table tt_content

20-03-08 Xavier Perseguers <xavier@perseguers.ch>
	* added retrieval and use of page author's name/email

20-02-08 Xavier Perseguers <xavier@perseguers.ch>
	* added support for multilingual feeds

18-02-08 Xavier Perseguers <xavier@perseguers.ch>
	* fixed PHP warning bugs

19-05-07 Fabien Udriot  <fabien.udriot@ecodev.ch>
	* first day, kick off in Torgon ;)