@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Generate *quickly* and *easily* RSS / ATOM feeds based on the latest content of a SQL table. Can deal with flexform content and multilingual websites.',
 	'category' => 'fe',
 	'shy' => 0,
-	'version' => '0.3.1',
+	'version' => '0.4.1',
 	'dependencies' => 'cms,div,lib',
 	'conflicts' => '',
 	'priority' => '',
@@ -27,7 +27,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => '',
 	'clearcacheonload' => 0,
 	'lockType' => '',
-	'author' => 'Fabien Udriot',
+	'author' => 'Fabien Udriot / Xavier Perseguers' ,
 	'author_email' => 'fabien.udriot@ecodev.ch',
 	'author_company' => 'Ecodev',
 	'CGLcompliance' => '',
